--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+github.client.id=4e530f0e13a1e5ccaa89
+github.client.secret=6f7ce7db76ebf1dee32a8cd1d86f2602e5b2b35a
+github.redirect.uri=http://localhost:8080/callback
