--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 github.client.id=4e530f0e13a1e5ccaa89
 github.client.secret=6f7ce7db76ebf1dee32a8cd1d86f2602e5b2b35a
 github.redirect.uri=http://localhost:8080/callback
-spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
